--- a/preamble.tex
+++ b/preamble.tex
@@ -104,17 +104,18 @@
 
 \titlespacing*{\section}{0cm}{0.7cm}{0.7cm}
 \titlespacing*{\subsection}{0em}{0.7cm}{0.7cm}
+\titlespacing*{\subsubsection}{0em}{0.7cm}{0.7cm}
 %use * to apply to all instances
 %\titlespacing*{sec}{left spacing}{above spacing}{below spacing}
 
-%\titleformat{\section}{\centering\large\scshape}{\thesection.}{0.5em}{}
-\titleformat{\section}{\Large}{\thesection.}{0.5em}{}
-%\titleformat{\subsection}{\centering\normalsize\scshape}{\thesubsection.}{0.5em}{}
-\titleformat{\subsection}{\large}{\thesubsection.}{0.5em}{}
+\titleformat{\section}{\bfseries\Large}{\thesection.}{0.5em}{}
+\titleformat{\subsection}{\bfseries\large}{\thesubsection.}{0.5em}{}
+\titleformat{\subsubsection}{\bfseries\large}{\thesubsubsection.}{0.5em}{}
 %titleformat{sec}{format}{number format}{number to title spacing}{prenote (between number and title)}
 \renewcommand{\thesection}{\arabic{section}} %section number format
 %\renewcommand{\thesection}{\normalfont\Roman{section}} %subsection number format
 %\renewcommand{\thesubsection}{\Roman{section}.\arabic{subsection}} %subsection number format
+% \renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}} %subsection number format
 \renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}} %subsection number format
 
 %toc
